RESOLVED FIXED163744
Fix JSC cast-align compiler warnings on ARMv7
https://bugs.webkit.org/show_bug.cgi?id=163744
Summary Fix JSC cast-align compiler warnings on ARMv7
Zan Dobersek
Reported 2016-10-20 11:37:31 PDT
Fix JSC cast-align compiler warnings on ARMv7
Attachments
Patch (3.06 KB, patch)
2016-10-20 11:40 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2016-10-20 11:40:50 PDT
Mark Lam
Comment 2 2016-10-20 12:54:03 PDT
Comment on attachment 292231 [details] Patch r=me
Zan Dobersek
Comment 3 2016-10-20 23:03:35 PDT
Comment on attachment 292231 [details] Patch Clearing flags on attachment: 292231 Committed r207659: <http://trac.webkit.org/changeset/207659>
Zan Dobersek
Comment 4 2016-10-20 23:03:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.