Fix JSC cast-align compiler warnings on ARMv7 https://bugs.webkit.org/show_bug.cgi?id=163744

Reviewed by Mark Lam.

Use the reinterpret_cast_ptr workaround in a few places where
the cast alignment warning is being thrown by the GCC compiler
when compiling for the ARMv7 architecture.

* heap/Heap.cpp:
(JSC::Zombify::visit):
* heap/HeapCell.h:
(JSC::HeapCell::zap):
(JSC::HeapCell::isZapped):
* heap/MarkedBlock.cpp:
(JSC::MarkedBlock::Handle::specializedSweep):


Canonical link: https://commits.webkit.org/181539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207659 268f45cc-cd09-0410-ab3c-d52691b4dbfc